--- a/src/pages/Upgrade/Upgrade.css
+++ b/src/pages/Upgrade/Upgrade.css
@@ -10,6 +10,7 @@ a {
 
 .Up-container {
   width: 100%;
+  margin-bottom: 65px;
   display: flex;
   flex-direction: column;
   align-items: center;
