--- a/src/pages/Payment/Payment.css
+++ b/src/pages/Payment/Payment.css
@@ -1,11 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Ubuntu");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Ubuntu", sans-serif;
-}
 .carddetail-cardtype {
   color: blue !important;
 }
@@ -15,13 +7,14 @@
   text-align: center;
 }
 .cardetails-payment {
-  background: #3579df;
+  background: #292727;
   max-width: 360px;
   margin: 80px auto;
   height: auto;
   padding: 35px;
-  padding-top: 70px;
-  border-radius: 5px;
+  border-radius: 15px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0.188em 1.55em rgb(156, 156, 156);
   position: relative;
 }
 
@@ -35,19 +28,21 @@
   display: block;
   color: white;
   margin-bottom: 6px;
+  font-size: 17px;
 }
 
 .cardetails-input {
   padding: 13px 0px 13px 25px;
   width: 100%;
   border: 1px solid #dddddd;
-  border-radius: 5px;
+  border-radius: 15px;
   letter-spacing: 1px;
   word-spacing: 3px;
   outline: none;
   font-size: 16px;
-  color: white;
-  background-color: rgb(212, 199, 199);
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   text-align: center;
 }
 
@@ -83,41 +78,11 @@
   background: rgb(62, 80, 109);
   padding: 12px;
   text-align: center;
+  font-size: 17px;
+  font-weight: bold;
   color: white;
-  border-radius: 5px;
+  border-radius: 32px;
   cursor: pointer;
-}
-
-.cardetails-payment-logo {
-  position: absolute;
-  top: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  height: 100px;
-  background: #f8f8f8;
-  border-radius: 50%;
-  box-shadow: 0 0 5px rgba(15, 119, 189, 0.2);
-  text-align: center;
-  line-height: 85px;
-}
-
-.cardetails-payment-logo:before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 90px;
-  height: 90px;
-  background: #2196f3;
-  border-radius: 50%;
-}
-
-.cardetails-payment-logo p {
-  position: relative;
-  color: #f8f8f8;
-  font-family: "Baloo Bhaijaan", cursive;
-  font-size: 58px;
 }
 
 @media screen and (max-width: 420px) {
@@ -164,7 +129,6 @@
   width: 80%;
   padding-bottom: 20px;
   border-bottom: 1px solid #1a1b21;
-  font-family: sans-serif;
   font-size: 1.2em;
   color: #aaa;
   word-spacing: 5px;
@@ -186,9 +150,8 @@
   width: 100px;
   justify-content: center;
   align-items: center;
-  font-family: sans-serif;
   font-size: 0.8em;
-  color: #aaa;
+  color: #ffffff;
   text-align: center;
   transition: background-color 0.25s ease-in-out;
 }
@@ -216,4 +179,12 @@
   border: 1px solid #1a1b21;
   background-color: #2c356d;
   color: #aaa;
+}
+
+.carddetails-head {
+  font-size: 25px;
+  color: white;
+  font-weight: bolder;
+  text-align: center;
+  padding-bottom: 25px;
 }
