--- a/src/pages/PreArrival/PreArrival.css
+++ b/src/pages/PreArrival/PreArrival.css
@@ -1,22 +1,19 @@
 .prearrival-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 400px;
+  margin: 10px auto;
   padding: 40px;
-  transform: translate(-50%, -50%);
+  margin-bottom: 60px;
+  width: 400px;
   background: rgba(240, 235, 235, 0.834);
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
 }
 
-.prearrival-box h2 {
-  margin: 0 0 30px;
-  padding: 0;
-  color: #1b1818;
+.prearr-head {
+  font-size: 30px;
+  font-weight: bolder;
   text-align: center;
-  font-size: large;
+  padding-bottom: 30px;
 }
 
 .prearrival-box .user-box {
@@ -25,14 +22,15 @@
 
 .prearrival-box .user-box input {
   width: 100%;
-  padding: 10px 0;
+  padding: 5px 5px;
   font-size: 16px;
+  font-weight: bold;
   color: #242020;
   margin-bottom: 30px;
-  border: none;
+  border-radius: 15px;
   border-bottom: 1px solid #fff;
   outline: none;
-  background: transparent;
+  margin-top: 15px;
 }
 .prearrival-box .user-box label {
   position: absolute;
@@ -51,109 +49,23 @@
   left: 0;
   color: #1a53bd;
   font-size: 15px;
+  font-weight: bold;
 }
 
-.prearrival-box form a {
+.prearrival-button {
   position: relative;
+  width: 100%;
   display: inline-block;
   padding: 10px 20px;
-  color: #03e9f4;
+  background-color: #0077cc;
+  color: white;
+  border-radius: 32px;
   font-size: 16px;
+  font-weight: bolder;
   text-decoration: none;
   text-transform: uppercase;
   overflow: hidden;
-  transition: 0.5s;
-  margin-top: 40px;
+  margin-top: 20px;
   text-align: center;
   letter-spacing: 4px;
-}
-
-.prearrival-box a:hover {
-  background: #49c5cb;
-  color: #fff;
-  border-radius: 5px;
-}
-
-.prearrival-box a span {
-  position: absolute;
-  display: block;
-}
-
-.prearrival-box a span:nth-child(1) {
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
-  animation: btn-anim1 1s linear infinite;
-}
-
-@keyframes btn-anim1 {
-  0% {
-    left: -100%;
-  }
-  50%,
-  100% {
-    left: 100%;
-  }
-}
-
-.prearrival-box a span:nth-child(2) {
-  top: -100%;
-  right: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
-  animation: btn-anim2 1s linear infinite;
-  animation-delay: 0.25s;
-}
-
-@keyframes btn-anim2 {
-  0% {
-    top: -100%;
-  }
-  50%,
-  100% {
-    top: 100%;
-  }
-}
-
-.prearrival-box a span:nth-child(3) {
-  bottom: 0;
-  right: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
-  animation: btn-anim3 1s linear infinite;
-  animation-delay: 0.5s;
-}
-
-@keyframes btn-anim3 {
-  0% {
-    right: -100%;
-  }
-  50%,
-  100% {
-    right: 100%;
-  }
-}
-
-.prearrival-box a span:nth-child(4) {
-  bottom: -100%;
-  left: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(360deg, transparent, #03e9f4);
-  animation: btn-anim4 1s linear infinite;
-  animation-delay: 0.75s;
-}
-
-@keyframes btn-anim4 {
-  0% {
-    bottom: -100%;
-  }
-  50%,
-  100% {
-    bottom: 100%;
-  }
 }
